[workspace]
members = [
    "nginx-sys",
    "examples",
]

[package]
name = "ngx"
version = "0.5.0"
edition = "2021"
autoexamples = false
categories = ["api-bindings", "network-programming"]
description = "FFI bindings to NGINX"
repository = "https://github.com/nginxinc/ngx-rust"
homepage = "https://github.com/nginxinc/ngx-rust"
license = "Apache-2.0"
keywords = ["nginx", "module", "sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nginx-sys = { path = "nginx-sys", version = "0.5.0"}

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
target-triple = "0.1.2"
