[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
ngx = { path = "../" }
aws-sign-v4 = "0.2.0"
chrono = "0.4.23"
http = "0.2.9"
libc = "0.2.140"

[[example]]
name = "curl"
path = "curl.rs"
crate-type = ["cdylib"]

[[example]]
name = "awssig"
path = "awssig.rs"
crate-type = ["cdylib"]

[[example]]
name = "httporigdst"
path = "httporigdst.rs"
crate-type = ["cdylib"]
required-features = ["linux"]

[[example]]
name = "upstream"
path = "upstream.rs"
crate-type = ["cdylib"]

[[example]]
name = "async"
path = "async.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[features]
linux = []
