[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
ngx = { path = "../" }
aws-sign-v4 = "0.3.0"
chrono = "0.4.23"
http = "1.1.0"
libc = "0.2.140"

[[example]]
name = "curl"
path = "curl.rs"
crate-type = ["cdylib"]

[[example]]
name = "awssig"
path = "awssig.rs"
crate-type = ["cdylib"]

[[example]]
name = "httporigdst"
path = "httporigdst.rs"
crate-type = ["cdylib"]
required-features = ["linux"]

[[example]]
name = "upstream"
path = "upstream.rs"
crate-type = ["cdylib"]

[[example]]
name = "async"
path = "async.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = ["export-modules"]
# Generate `ngx_modules` table with module exports
# The exports table is required for building loadable modules with --crate-type cdylib
# outside of the NGINX buildsystem. However, cargo currently does not detect
# this configuration automatically.
# See https://github.com/rust-lang/rust/issues/20267
export-modules = []
linux = []
