[package]
name = "ngx-sys"
version = "0.2.0"
authors = ["Sehyo Chang   sehyo@nginx.com"]

[lib]
doctest = false
test = true
crate-type = ["staticlib","rlib"]

[features]
default = ["with-compat","with-threads","with-http_addition_module","with-http_auth_request_module",
"with-http_gunzip_module","with-http_gzip_static_module","with-http_random_index_module",
"with-http_realip_module","with-http_secure_link_module","with-http_slice_module",
"with-http_stub_status_module","with-http_sub_module","with-stream","with-stream_realip_module",
"with-stream_ssl_preread_module","with-file-aio","with-http_ssl_module","with-stream_ssl_module"
]

with-compat=[]
with-threads=[]
with-http_addition_module=[]
with-http_auth_request_module=[]
with-http_gunzip_module=[]
with-http_gzip_static_module=[]
with-http_random_index_module=[]
with-http_realip_module=[]
with-http_secure_link_module=[]
with-http_slice_module=[]
with-http_stub_status_module=[]
with-http_sub_module=[]
with-stream=[]
with-stream_realip_module=[]
with-stream_ssl_preread_module=[]
with-file-aio=[]
with-http_ssl_module=[]
with-stream_ssl_module=[]




[build-dependencies]
bindgen = "0.35.0"


